@@ -1,6 +1,7 @@
-  Google issue 305:  ibus-chewing.schema -> ibus-chewing.schemas
-  Google issue 306:  hardcoded chewing datadir
+  IBus Google issue 305:  ibus-chewing.schema -> ibus-chewing.schemas
+  IBus Google issue 307:  hardcoded chewing datadir
   Sync chewing candPerPage and IBusTable->page_size
+  Sync between IM and keyboard (Experimental)
  
 * Tue Mar 03 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.2.20090303-1
   Required gconf2 -> GConf2.
